feat: improve Code, Sonar Is not taking covered this lines but report local Jacoco its ok.